Included new gems in vs project

--- a/src/IronSharePoint.IronRuby/IronSharePoint.IronRuby.csproj
+++ b/src/IronSharePoint.IronRuby/IronSharePoint.IronRuby.csproj
@@ -683,10 +683,14 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\activesupport-3.0.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\active_support-3.0.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\haml-4.0.0.gem" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\hike-1.2.1.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\i18n-0.6.4.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\json_pure-1.7.7.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\log4r-1.1.10.gem" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\multi_json-1.7.0.gem" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\rack-1.5.2.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\slim-1.3.6.gem" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\sprockets-2.9.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\temple-0.5.5.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\cache\tilt-1.3.5.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\empty" />
@@ -921,6 +925,12 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\haml-4.0.0\lib\haml\template\plugin.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\haml-4.0.0\lib\haml\util.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\haml-4.0.0\lib\haml\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\hike-1.2.1\lib\hike.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\hike-1.2.1\lib\hike\extensions.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\hike-1.2.1\lib\hike\index.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\hike-1.2.1\lib\hike\normalized_array.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\hike-1.2.1\lib\hike\paths.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\hike-1.2.1\lib\hike\trail.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\i18n-0.6.4\lib\i18n\backend\base.rb" />
@@ -1050,6 +1060,86 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\log4r-1.1.10\lib\log4r\staticlogger.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\log4r-1.1.10\lib\log4r\version.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\log4r-1.1.10\lib\log4r\yamlconfigurator.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\adapter.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\adapters\gson.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\adapters\jrjackson.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\adapters\json_common.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\adapters\json_gem.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\adapters\json_pure.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\adapters\nsjsonserialization.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\adapters\oj.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\adapters\ok_json.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\adapters\yajl.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\convertible_hash_keys.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\options.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\vendor\okjson.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\multi_json-1.7.0\lib\multi_json\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\auth\abstract\handler.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\auth\abstract\request.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\auth\basic.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\auth\digest\md5.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\auth\digest\nonce.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\auth\digest\params.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\auth\digest\request.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\backports\uri\common_18.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\backports\uri\common_192.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\backports\uri\common_193.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\body_proxy.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\builder.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\cascade.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\chunked.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\commonlogger.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\conditionalget.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\config.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\content_length.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\content_type.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\deflater.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\directory.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\etag.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\file.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\handler.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\handler\cgi.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\handler\evented_mongrel.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\handler\fastcgi.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\handler\lsws.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\handler\mongrel.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\handler\scgi.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\handler\swiftiplied_mongrel.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\handler\thin.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\handler\webrick.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\head.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\lint.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\lobster.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\lock.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\logger.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\methodoverride.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\mime.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\mock.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\multipart.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\multipart\generator.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\multipart\parser.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\multipart\uploaded_file.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\nulllogger.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\recursive.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\reloader.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\request.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\response.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\rewindable_input.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\runtime.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\sendfile.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\server.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\session\abstract\id.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\session\cookie.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\session\memcache.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\session\pool.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\showexceptions.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\showstatus.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\static.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\urlmap.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\utils.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\rack-1.5.2\lib\rack\utils\okjson.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\slim-1.3.6\lib\slim.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\slim-1.3.6\lib\slim\code_attributes.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\slim-1.3.6\lib\slim\command.rb" />
@@ -1068,6 +1158,45 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\slim-1.3.6\lib\slim\template.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\slim-1.3.6\lib\slim\translator.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\slim-1.3.6\lib\slim\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\rake\sprocketstask.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\asset.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\asset_attributes.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\base.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\bundled_asset.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\cache\file_store.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\caching.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\charset_normalizer.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\closure_compressor.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\compressing.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\context.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\directive_processor.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\eco_template.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\ejs_template.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\engines.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\environment.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\errors.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\index.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\jst_processor.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\manifest.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\mime.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\paths.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\processed_asset.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\processing.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\processor.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\safety_colons.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\sass_cache_store.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\sass_compressor.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\sass_functions.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\sass_importer.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\sass_template.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\scss_template.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\server.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\static_asset.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\uglifier_compressor.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\utils.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\sprockets-2.9.0\lib\sprockets\yui_compressor.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\temple-0.5.5\lib\temple.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\temple-0.5.5\lib\temple\engine.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\gems\temple-0.5.5\lib\temple\erb\engine.rb" />
@@ -1128,10 +1257,14 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\activesupport-3.0.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\active_support-3.0.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\haml-4.0.0.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\hike-1.2.1.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\i18n-0.6.4.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\json_pure-1.7.7.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\log4r-1.1.10.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\multi_json-1.7.0.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\rack-1.5.2.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\slim-1.3.6.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\sprockets-2.9.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\temple-0.5.5.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\gems\1.9.1\specifications\tilt-1.3.5.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby\ruby\site_ruby\1.9.1\rbreadline.rb" />
