--- a/src/IronSharePoint.Framework/IronSharePoint.Framework.csproj
+++ b/src/IronSharePoint.Framework/IronSharePoint.Framework.csproj
@@ -98,11 +98,14 @@
     <Compile Include="Administration\HiveSetup.cs" />
     <Compile Include="Administration\HiveRegistry.cs" />
     <Compile Include="Administration\HiveSetupCollection.cs" />
+    <Compile Include="Diagnostics\IronCategoryDiagnosticsId.cs" />
     <Compile Include="Diagnostics\IronDiagnosticService.cs" />
+    <Compile Include="Exceptions.cs" />
     <Compile Include="Hives\SystemHive.cs" />
     <Compile Include="Hives\HiveComposite.cs" />
     <Compile Include="Hives\DirectoryHive.cs" />
     <Compile Include="Hives\SPDocumentHive.cs" />
+    <Compile Include="IWrapperControl.cs" />
     <Compile Include="IHive.cs" />
     <Compile Include="IIronControl.cs" />
     <Compile Include="IIronDataStore.cs" />
@@ -127,6 +130,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RackHttpHandler.cs" />
     <Compile Include="Util\BlockingQueue.cs" />
+    <Compile Include="Util\WrapperControlExtensions.cs" />
     <Compile Include="Util\EnumerableExtensions.cs" />
     <Compile Include="Util\IBlockingQueue.cs" />
     <Compile Include="Util\ScriptEngineExtensions.cs" />
