--- a/test/IronSharePoint.Framework.Test/IronSharePoint.Framework.Test.csproj
+++ b/test/IronSharePoint.Framework.Test/IronSharePoint.Framework.Test.csproj
@@ -85,6 +85,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -111,6 +112,7 @@
     <Compile Include="IronScriptHost_Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Console\ScriptResult_Fixture.cs" />
+    <Compile Include="RackHttpHandler_Fixture.cs" />
     <Compile Include="TestHelper.cs" />
     <Compile Include="Util\EnumerableExtensions_Fixture.cs" />
     <Compile Include="Util\ScriptEngineExtensions_Fixture.cs" />
